package com.zpy.yearn.pennTree;

/**
 * Created by zpy on 2018/10/24.
 */
public interface Tag {
}
