@startuml

title __YEARN-PENNTREE's Class Diagram__\n

  package  {
    package com.zpy.yearn.pennTree {
      class Leaf {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      enum SyntacPhrase {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      interface Tag {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      class TreeFacade {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      class TreeTraverseContext {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      class TreeTraverser {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      enum WordTag {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnLabel {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnLabelFactory {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnTree {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.yearnTree {
      class YearnTreeFactory {
      }
    }
  }
  

  SyntacPhrase -up-|> Tag
  WordTag -up-|> Tag
  YearnLabel -up-|> Label
  YearnLabelFactory -up-|> LabelFactory
  YearnTree -up-|> Tree


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
